# rust-redshift-udf

./: README.md  deploy.sh
cdk/: .eslintrc.js  package-lock.json  package.json
cdk/lib/: cdk-stack.ts
lambda/: Cargo.toml
lambda/src/: main.rs
